# cvb23-clean-architecture

./: .cz.toml  Pipfile  README.md  pyproject.toml
arc/: software-life-cycle-in-real-world.drawio
src/cv_blast.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/cvb23/: settings.py
src/cvb23/adapters/proc/: blast_executor.py
src/cvb23/assets/input/query/: blast.tsv  query.faa
src/cvb23/assets/input/ref_dbs/: uniprotkb_gene_gyrb_AND_taxonomy_id_492_2023_07_01.faa
src/cvb23/assets/output/: blast.out  blast.tsv
src/cvb23/core/domain/dtos/: blast_config.py  blast_results.py  data_type.py  query_sequences.py
src/cvb23/core/domain/entities/: blast_executor.py
src/cvb23/core/domain/exceptions/: __init__.py
src/cvb23/core/use_cases/run_sequential_blast/: __init__.py  match_blast_type.py
src/cvb23/ports/cli/: main.py
