# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[build-system]

requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


# ? ----------------------------------------------------------------------------
# ? Building
# ? ----------------------------------------------------------------------------

[project]

name = "cv_blast"
version = "0.0.1"
authors = [{ name = "Samuel Galvão Elias", email = "sgelias@outlook.com" }]
description = "Um Wrapper para o BLAST para CV Inverno (versão Verão) de Bioinformática 2023"
requires-python = ">=3.11"
keywords = ["DNA", "Bioinformatics", "CVB23"]
classifiers = ["Programming Language :: Python :: 3.11"]

# ? ----------------------------------------------------------------------------
# ? Entrypoints
# ? ----------------------------------------------------------------------------

[project.scripts]

# The Command Line Interface Port
cvblast-cmd="cvb23.ports.cli.main:cvb_cmd"


# ? ----------------------------------------------------------------------------
# ? Assets
# ? ----------------------------------------------------------------------------

[tool.setuptools.package-data]

gcon = ["assets/*"]

# ? ----------------------------------------------------------------------------
# ? Code consistence
# ? ----------------------------------------------------------------------------

[tool.mypy]

python_version = 3.11
exclude = ["build/"]
ignore_missing_imports = "True"
explicit_package_bases = "./src/"
follow_imports  = "normal"
warn_redundant_casts = "True"
warn_unused_ignores = "False"
disallow_any_generics = "True"
check_untyped_defs = "True"
no_implicit_reexport = "True"
namespace_packages = "False"
disallow_untyped_defs = "True"

[tool.attrs-mypy]

init_forbid_extra = "True"
init_typed = "True"
warn_required_dynamic_aliases = "True"
warn_untyped_fields = "True"


[tool.flake8]

ignore = "E722, W503, E501, E203"
